Closed Bug 1712177 Opened 3 years ago Closed 3 years ago

Crash in [@ nsDisplayBlendMode::Paint]

Categories

(Core :: Web Painting, defect)

Firefox 90
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 --- fixed

People

(Reporter: calixte, Assigned: mattwoodrow)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/5fee29b1-6dfd-445c-9c77-8e53c0210520

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll nsDisplayBlendMode::Paint layout/painting/nsDisplayList.cpp:6219
1 xul.dll nsDisplayList::Paint layout/painting/nsDisplayList.cpp:2457
2 xul.dll nsDisplayBackdropRootContainer::Paint layout/painting/nsDisplayList.cpp:10021
3 xul.dll nsDisplayList::Paint layout/painting/nsDisplayList.cpp:2457
4 xul.dll nsDisplayList::PaintRoot layout/painting/nsDisplayList.cpp:2500
5 xul.dll static nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:3492
6 xul.dll mozilla::PresShell::RenderDocument layout/base/PresShell.cpp:4620
7 xul.dll mozilla::dom::CanvasRenderingContext2D::DrawWindow dom/canvas/CanvasRenderingContext2D.cpp:4949
8 xul.dll mozilla::dom::CanvasRenderingContext2D_Binding::drawWindow dom/bindings/CanvasRenderingContext2DBinding.cpp:2341
9 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3297

There is 1 crash in nightly 90 with buildid 20210520095745. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1540737.

[1] https://hg.mozilla.org/mozilla-central/rev?node=411d3031b1b4

Severity: -- → S2
Flags: needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1d7b099453e3
Handle allocation failure of temporary DrawTarget used for painting blend mode. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Flags: needinfo?(matt.woodrow)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: