Bug 1712177 - Handle allocation failure of temporary DrawTarget used for painting blend mode. r=jrmuizel

Depends on D116053

Differential Revision: https://phabricator.services.mozilla.com/D116054